@@ -1,4 +1,9 @@
-﻿drkns 15.11.2015 11:59:17 +0200 - build 4456
+﻿shmuel 17.11.2015 14:41:37 +0200 - build 4457
+
+1. Функция FSF.FarInputRecordToName при некоторых значениях своего первого аргумента могла
+   не возвращаться, покуда не поступит ввод от консоли.
+
+drkns 15.11.2015 11:59:17 +0200 - build 4456
 
 1. Продолжение 4455.
 
